# longtermphotzp

./: .dockerignore  .gitignore  Changelog.md  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  dockercmd.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
deploy/: crontab  runphotzp-docker.sh  runphotzp.sh  supervisor-app.conf
guidestarpredictor/: gsana.py  guidestarpredictor.py
longtermphotzp/: aperturephot.py  atlasrefcat2.py  es_aws_imagefinder.py  gaiaastrometryservicetools.py  longtermphotzp.py  photcalibration.py  photdbinterface.py  webapp.py
longtermphotzp/sbiglinearityfit/: analyzesbig.py  sbigcrawler.py  sbigfitter.py  sbiglinedbinterface.py
longtermphotzp/templates/: index.html
longtermphotzp/tools/: copydatabase.py
src/: longtermphotzp.py
src/longtermphotzp/: es_aws_imagefinder.py  longtermphotzp.py  photcalibration.py  photdbinterface.py  ps1ipp.py
src/test/: test_aws.py  test_photcalibration.py
src/tools/: hlsp_atlas-refcat2_atlas_ccd_all_multi_v1_readme.txt  refcat2csv2sqlite.py
test/: test_aperturephot.py  test_aws.py  test_photcalibration.py
test/data/: test_atlasphotomerty.py
