[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longtermphotzp"
version = "8.2.1"
description = "Long-term photometry zero-point analysis and calibration tool"
readme = "README.md"
requires-python = "==3.14.*"
license = {text = "MIT"}
authors = [
    {name = "Daniel Harbeck", email = "dharbeck@lco.global"}
]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "astropy==7.2.*",
    "astroquery",
    "attrs==21.4.*",
    "boto3==1.*",
    "Flask==2.3.*",
    "gevent==26.4.*",
    "gunicorn==20.1.*",
    "kiwisolver==1.3.*",
    "matplotlib==3.10.*",
    "numpy==2.4.*",
    "opensearch-dsl",
    "opensearch-py==2.1.*",
    "photutils==2.3.*",
    "psycopg[binary]==3.3.*",
    "PyYAML==6.0.*",
    "requests==2.27.*",
    "scipy==1.17.*",
    "SQLAlchemy==2.0.*",
    "SQLAlchemy-Utils==0.42.*",
    #"tomli==2.0.1",
  
 
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[project.scripts]
photcalibration = "longtermphotzp.photcalibration:photzpmain"
longtermphotzp = "longtermphotzp.longtermphotzp:longtermphotzp"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["longtermphotzp*", ]

[tool.setuptools.package-data]
longtermphotzp = ["templates/*.html"]
